--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
             align-items: center;
             height: 100vh;
             text-align: center;
-            overflow: hidden; /* Чтобы видео не выходило за пределы экрана */
+            overflow: hidden; 
         }
 
-        /* Видео на заднем фоне */
+        
         video.background-video {
             position: absolute;
             top: 0;
@@ -27,9 +27,9 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            filter: blur(8px); /* Размытие фона */
-            z-index: -1; /* Помещаем видео на задний план */
-            pointer-events: none; /* Запрещаем взаимодействие с видео */
+            filter: blur(8px); 
+            z-index: -1; 
+            pointer-events: none; 
         }
 
         .container {
